Support for filteredScopes, multi project/cluster access control
This supports the latest prom-keycloak-proxy features for regex
filters in prom-keycloak-proxy for access control to multiple
individual cluster and project permissions at the same time.

--- a/vars.yaml
+++ b/vars.yaml
@@ -358,7 +358,7 @@ AUTH_SECRET: "{{ query('kubernetes.core.k8s', kind='Secret', resource_name=(AUTH
 # The Auth openshift secret with the admin credentials. 
 AUTH_ADMIN_OPENSHIFT_SECRET: "{{ lookup('env', 'AUTH_ADMIN_OPENSHIFT_SECRET_' + SITE_SHORT_NAME) | default('keycloak-initial-admin', true) }}"
 # The Auth admin username. 
-AUTH_ADMIN_USERNAME: "{{ query('kubernetes.core.k8s', kind='Secret', resource_name=AUTH_ADMIN_OPENSHIFT_SECRET, namespace=AUTH_NAMESPACE)[0].data['username'] | b64decode }}"
+AUTH_ADMIN_USERNAME: "{{ (query('kubernetes.core.k8s', kind='Secret', resource_name=AUTH_ADMIN_OPENSHIFT_SECRET, namespace=AUTH_NAMESPACE) | first | default({})).data['username'] | b64decode | default('admin') }}"
 # The Auth admin password. 
 AUTH_ADMIN_PASSWORD: "{{ query('kubernetes.core.k8s', kind='Secret', resource_name=AUTH_ADMIN_OPENSHIFT_SECRET, namespace=AUTH_NAMESPACE)[0].data['password'] | b64decode }}"
 # The Auth URL. 
