--- a/openshift-local/cloud-setup/configmaps/configmap-cloud-setup-defaults.yaml
+++ b/openshift-local/cloud-setup/configmaps/configmap-cloud-setup-defaults.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cloud-setup-defaults
-  namespace: smartaquaculture
+  namespace: aitelemetry
 data:
   main.yaml: |
     
@@ -38,7 +38,7 @@ data:
     # A short description of the site. 
     SITE_DESCRIPTION: "AI telemetry on OpenShift dashboards"
     # The site namespace in OpenShift. 
-    SITE_NAMESPACE: "{{ lookup('env', 'SITE_NAMESPACE') | default('smartaquaculture', true) }}"
+    SITE_NAMESPACE: "{{ lookup('env', 'SITE_NAMESPACE') | default('aitelemetry', true) }}"
     # The main locale of this application. 
     SITE_LOCALE: "en-US"
     # A computate specific identifier for the locale and language of the code. 
@@ -586,7 +586,7 @@ data:
     # A short description of the site. 
     SITE_DESCRIPTION: "AI telemetry on OpenShift dashboards"
     # The site namespace in OpenShift. 
-    SITE_NAMESPACE: "{{ lookup('env', 'SITE_NAMESPACE') | default('smartaquaculture', true) }}"
+    SITE_NAMESPACE: "{{ lookup('env', 'SITE_NAMESPACE') | default('aitelemetry', true) }}"
     # The main locale of this application. 
     SITE_LOCALE: en-US
     # A computate specific identifier for the locale and language of the code. 
