--- a/openshift-local/cloud-setup/configmaps/configmap-cloud-setup-tasks.yaml
+++ b/openshift-local/cloud-setup/configmaps/configmap-cloud-setup-tasks.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: cloud-setup-tasks
-  namespace: smartaquaculture
+  namespace: aitelemetry
 data:
   main.yaml: |
     ---
