--- a/openshift-local/secrets/randomsecrets/postgres-pguser-aitelemetry/randomsecret.yaml
+++ b/openshift-local/secrets/randomsecrets/postgres-pguser-aitelemetry/randomsecret.yaml
@@ -2,7 +2,7 @@ apiVersion: redhatcop.redhat.io/v1alpha1
 kind: RandomSecret
 metadata:
   name: postgres-pguser-aitelemetry
-  namespace: smartaquaculture
+  namespace: aitelemetry
 spec:
   authentication: 
     path: kubernetes
