--- a/openshift-local/secrets/secretenginemounts/kv/secretenginemount.yaml
+++ b/openshift-local/secrets/secretenginemounts/kv/secretenginemount.yaml
@@ -2,7 +2,7 @@ apiVersion: redhatcop.redhat.io/v1alpha1
 kind: SecretEngineMount
 metadata:
   name: kv
-  namespace: smartaquaculture
+  namespace: aitelemetry
 spec:
   authentication: 
     path: kubernetes
