--- a/openshift-local/secrets/secretstores/secret-store/secretstore.yaml
+++ b/openshift-local/secrets/secretstores/secret-store/secretstore.yaml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: SecretStore
 metadata:
   name: secret-store
-  namespace: smartaquaculture
+  namespace: aitelemetry
 spec:
   provider:
     vault:
