--- a/openshift-local/applications/cloud-setup/application.yaml
+++ b/openshift-local/applications/cloud-setup/application.yaml
@@ -14,7 +14,7 @@ spec:
     targetRevision: HEAD
     path: openshift-local/cloud-setup/
   destination:
-    namespace: smartaquaculture
+    namespace: aitelemetry
     server: 'https://kubernetes.default.svc'
   syncPolicy:
     automated:
