--- a/openshift-local/base/services/aitelemetry/service.yaml
+++ b/openshift-local/base/services/aitelemetry/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: smartaquaculture
+  namespace: aitelemetry
   name: aitelemetry
   labels:
     app.kubernetes.io/instance: aitelemetry
