--- a/openshift-local/cloud-setup/rolebindings/cloud-setup/rolebinding.yaml
+++ b/openshift-local/cloud-setup/rolebindings/cloud-setup/rolebinding.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: smartaquaculture
+  namespace: aitelemetry
   name: database-cloud-setup-exec
 rules:
 - apiGroups: [""]
@@ -18,12 +18,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  namespace: smartaquaculture
+  namespace: aitelemetry
   name: database-cloud-setup-exec
 subjects:
 - kind: ServiceAccount
   name: cloud-setup
-  namespace: smartaquaculture
+  namespace: aitelemetry
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -50,7 +50,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: cloud-setup
-  namespace: smartaquaculture
+  namespace: aitelemetry
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -59,7 +59,7 @@ roleRef:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  namespace: smartaquaculture
+  namespace: aitelemetry
   name: cloud-setup-exec
 rules:
 - apiGroups: [""]
@@ -75,12 +75,12 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  namespace: smartaquaculture
+  namespace: aitelemetry
   name: cloud-setup-exec
 subjects:
 - kind: ServiceAccount
   name: cloud-setup
-  namespace: smartaquaculture
+  namespace: aitelemetry
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -104,7 +104,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: cloud-setup
-  namespace: smartaquaculture
+  namespace: aitelemetry
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -131,7 +131,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: cloud-setup
-  namespace: smartaquaculture
+  namespace: aitelemetry
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -155,7 +155,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: cloud-setup
-  namespace: smartaquaculture
+  namespace: aitelemetry
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
@@ -179,7 +179,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: cloud-setup
-  namespace: smartaquaculture
+  namespace: aitelemetry
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
