--- a/openshift-local/secrets/externalsecrets/postgres-pguser-aitelemetry/externalsecret.yaml
+++ b/openshift-local/secrets/externalsecrets/postgres-pguser-aitelemetry/externalsecret.yaml
@@ -2,7 +2,7 @@ apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
   name: postgres-pguser-aitelemetry
-  namespace: smartaquaculture
+  namespace: aitelemetry
 spec:
   refreshInterval: 15s
   secretStoreRef:
