--- a/openshift-local/cloud-setup/configmaps/configmap-cloud-setup-defaults.yaml
+++ b/openshift-local/cloud-setup/configmaps/configmap-cloud-setup-defaults.yaml
@@ -178,13 +178,13 @@ data:
     # The container registry where the container will be pushed. 
     CONTAINER_REGISTRY: "quay.io"
     # The organization within quay.io where the container will be pushed. 
-    CONTAINER_ORG: "computateorg"
+    CONTAINER_ORG: "nerc-images"
     # The container name where the container will be pushed. 
     CONTAINER_NAME: "ai-telemetry"
     # The container version where the container will be pushed. 
     CONTAINER_VERSION: "latest"
     # The container URI where the container will be pushed. 
-    CONTAINER_URI: "quay.io/computateorg/ai-telemetry:latest"
+    CONTAINER_URI: "quay.io/nerc-images/ai-telemetry:latest"
 
     ###########################
     # Static content defaults #
@@ -433,7 +433,7 @@ data:
     ##############
 
     # Enable Kafka message integration. 
-    ENABLE_KAFKA: {{ ENABLE_KAFKA | lower }}
+    ENABLE_KAFKA: false
     # The namespace in OpenShift where Kafka will run. 
     KAFKA_NAMESPACE: "{{ KAFKA_NAMESPACE }}"
     # The Kafka SSL KeyStore secret name. 
@@ -441,7 +441,7 @@ data:
     # The Kafka SSL TrustStore secret name. 
     KAFKA_SSL_TRUSTSTORE_SECRET: "{{ KAFKA_SSL_TRUSTSTORE_SECRET }}"
     # The Kafka port. 
-    KAFKA_PORT: {{ KAFKA_PORT }}
+    KAFKA_PORT: 9093
 
     #############
     # MQTT vars #
@@ -563,9 +563,9 @@ data:
     # The Auth client. 
     AUTH_CLIENT_SA: "{{ lookup('env', 'AUTH_CLIENT_SA') | default(SITE_NAME + '-sa', true) }}"
     # The Auth openshift secret with the client secret credentials. 
-    AUTH_OPENSHIFT_SECRET_SA: ""
+    AUTH_OPENSHIFT_SECRET_SA: "{{ lookup('env', 'AUTH_OPENSHIFT_SECRET_SA') | default('cloud-extra', true) }}"
     # The Auth secret. 
-    AUTH_SECRET_SA: "{{ query('kubernetes.core.k8s', kind='Secret', resource_name=AUTH_OPENSHIFT_SECRET_SA, namespace=SITE_NAMESPACE)[0].data.clientSecret | b64decode }}"
+    AUTH_SECRET_SA: "{{ (query('kubernetes.core.k8s', kind='Secret', resource_name=AUTH_OPENSHIFT_SECRET_SA, namespace=SITE_NAMESPACE) | first | default({\"data\": {\"clientSecret\": \"\"}})).data.clientSecret | b64decode }}"
 
     ###########
     # grafana #
@@ -577,9 +577,9 @@ data:
     ###################
 
     # The Auth openshift secret with the admin credentials. 
-    FULFILLMENT_API_OPENSHIFT_SECRET: ""
+    FULFILLMENT_API_OPENSHIFT_SECRET: "{{ lookup('env', 'FULFILLMENT_API_OPENSHIFT_SECRET') | default('cloud-extra', true) }}"
     # The Auth admin username. 
-    FULFILLMENT_API_OPENSHIFT_TOKEN: "{{ query('kubernetes.core.k8s', kind='Secret', resource_name=FULFILLMENT_API_OPENSHIFT_SECRET, namespace=SITE_NAMESPACE)[0].data['token'] | b64decode }}"
+    FULFILLMENT_API_OPENSHIFT_TOKEN: "{{ (query('kubernetes.core.k8s', kind='Secret', resource_name=FULFILLMENT_API_OPENSHIFT_SECRET, namespace=SITE_NAMESPACE) | first | default({\"data\": {\"token\": \"\"}})).data['token'] | b64decode }}"
     # Whether to use SSL when connecting to the fulfillment API. 
     FULFILLMENT_API_SSL: "{{ (lookup('env', 'FULFILLMENT_API_SSL') | lower) != 'false' }}"
     # The host name to connect to the fulfillment API in OpenShift. 
@@ -599,9 +599,9 @@ data:
     # Enable thin UI
     ENABLE_THIN_UI: "{{ lookup('env', 'ENABLE_THIN_UI') | default('false', true) | bool }}"
     # The Auth openshift secret with the admin credentials. 
-    ESI_API_OPENSHIFT_SECRET: ""
+    ESI_API_OPENSHIFT_SECRET: "{{ lookup('env', 'ESI_API_OPENSHIFT_SECRET') | default('cloud-extra', true) }}"
     # The Auth admin username. 
-    ESI_API_OPENSHIFT_TOKEN: "{{ query('kubernetes.core.k8s', kind='Secret', resource_name=ESI_API_OPENSHIFT_SECRET, namespace=SITE_NAMESPACE)[0].data['token'] | b64decode }}"
+    ESI_API_OPENSHIFT_TOKEN: "{{ (query('kubernetes.core.k8s', kind='Secret', resource_name=ESI_API_OPENSHIFT_SECRET, namespace=SITE_NAMESPACE) | first | default({\"data\": {\"token\": \"\"}})).data['token'] | b64decode }}"
     # Whether to use SSL when connecting to the fulfillment API. 
     ESI_API_SSL: "{{ (lookup('env', 'ESI_API_SSL') | lower) != 'false' }}"
     # The host name to connect to the fulfillment API in OpenShift. 
