Updating OpenShift Local deployment

--- a/openshift-local/applications/prom-keycloak-proxy-local-cluster/application.yaml
+++ b/openshift-local/applications/prom-keycloak-proxy-local-cluster/application.yaml
@@ -27,3 +27,8 @@ spec:
         duration: 30s # Initial duration
         factor: 2 # Factor to multiply duration by on each retry
         maxDuration: 5m # Maximum duration between retries
+    syncOptions:
+      - CreateNamespace=true
+    managedNamespaceMetadata:
+      labels:
+        database-engine-admin: 'true'
