--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@ target/**
 .flattened-pom.xml
 .vscode
 bin/generate.sh
-bin/generatenow.sh
+bin/generateonce.sh
 bin/index.sh
-bin/indexnow.sh
+bin/indexonce.sh
 bin/watch.sh
 bin/watchnow.sh
 doc/getting-started/openshift-local/tls*
