Fixing deployment to OpenShift Local

--- a/openshift-local/applications/openshift-monitoring/application.yaml
+++ b/openshift-local/applications/openshift-monitoring/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prom-keycloak-proxy-local-cluster
+  name: openshift-monitoring
   namespace: openshift-gitops
   annotations:
     argocd.argoproj.io/sync-options: Replace=true
